--- a/hotel-microservice/pom.xml
+++ b/hotel-microservice/pom.xml
@@ -9,21 +9,30 @@
 		<version>2.7.5</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.hotel</groupId>
 	<artifactId>hotel-microservice</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+
 	<name>hotel-microservice</name>
 	<description>Hotel project for Spring Boot</description>
+
 	<properties>
 		<java.version>1.8</java.version>
 		<spring-cloud.version>2021.0.5</spring-cloud.version>
-
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
