--- a/user-microservice/src/main/resources/application.properties
+++ b/user-microservice/src/main/resources/application.properties
@@ -11,7 +11,38 @@ spring.datasource.password=abc1234
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.instance.prefer-ip-address=true
-eureka.client.fetch-registry=true
-eureka.client.register-with-eureka=true
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.config.import=optional:configserver:http://localhost:8085
+
+# actuator configurations
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
+#Reselience and circuit breaker configurations
+# CircuitBreaker configuration
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.registerHealthIndicator=true
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.eventConsumerBufferSize=10
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.failureRateThreshold=50
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.minimumNumberOfCalls=5
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.automaticTransitionFromOpenToHalfOpenEnabled=true
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.waitDurationInOpenState=6s
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.permittedNumberOfCallsInHalfOpenState=3
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.slidingWindowSize=10
+resilience4j.circuitbreaker.instances.ratingHotelBreaker.slidingWindowType=COUNT_BASED
+
+# Retry configuration
+resilience4j.retry.instances.ratingHotelService.max-attempts=3
+resilience4j.retry.instances.ratingHotelService.wait-duration=5s
+
+# RateLimiter configuration
+resilience4j.ratelimiter.instances.userRateLimiter.limit-refresh-period=4s
+resilience4j.ratelimiter.instances.userRateLimiter.limit-for-period=2
+resilience4j.ratelimiter.instances.userRateLimiter.timeout-duration=2s
+
+
+# These configurations will come from git via config server
+
+#eureka.instance.prefer-ip-address=true
+#eureka.client.fetch-registry=true
+#eureka.client.register-with-eureka=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
